objects/tffa__DocusignConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for docusign integration</description>
    <fields>
        <fullName>tffa__AccountID__c</fullName>
        <description>GUID of the docusign administration account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the docusign integration is turned on</description>
        <inlineHelpText>If the docusign integration is turned on</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IntegratorKey__c</fullName>
        <description>GUID of the integration key generated by Docusign</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IntegratorKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Docusign Configuration</label>
</CustomObject>